Fix : overflow :hidden 속성 추가

--- a/week1/TodoList/style.css
+++ b/week1/TodoList/style.css
@@ -107,4 +107,5 @@
 .hidden {
   width: 0;
   display: none;
+  overflow: hidden;
 }
